WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107977
[WK2] NetworkProcess cannot load files with non-ASCII names
https://bugs.webkit.org/show_bug.cgi?id=107977
Summary
[WK2] NetworkProcess cannot load files with non-ASCII names
Alexey Proskuryakov
Reported
2013-01-25 12:37:19 PST
Fails to issue a sandbox extension.
Attachments
proposed fix
(1.43 KB, patch)
2013-01-25 12:39 PST
,
Alexey Proskuryakov
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-01-25 12:39:05 PST
Created
attachment 184796
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2013-01-25 13:15:32 PST
Committed <
http://trac.webkit.org/changeset/140861
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug