        NetworkProcess cannot load files with non-ASCII names         https://bugs.webkit.org/show_bug.cgi?id=107977

Reviewed by Brady Eidson.

        * Shared/Network/NetworkResourceLoadParameters.cpp:
        (WebKit::NetworkResourceLoadParameters::encode): Use the correct path accessor.



Canonical link: https://commits.webkit.org/126175@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140861 268f45cc-cd09-0410-ab3c-d52691b4dbfc